@@ -55,7 +55,7 @@ GType      planner_task_tree_get_type               (void) G_GNUC_CONST;
 GtkWidget *planner_task_tree_new                    (PlannerWindow     *window,
 						     PlannerGanttModel *model,
 						     gboolean           custom_properties,
-						     gpointer           first_column,
+						     gint               first_column,
 						     ...);
 void       planner_task_tree_set_model              (PlannerTaskTree   *tree,
 						     PlannerGanttModel *model);
@@ -66,7 +66,8 @@ void       planner_task_tree_edit_task              (PlannerTaskTree   *tree);
 void       planner_task_tree_insert_tasks           (PlannerTaskTree   *tree);
 void       planner_task_tree_select_all             (PlannerTaskTree   *tree);
 void       planner_task_tree_unlink_task            (PlannerTaskTree   *tree);
-void       planner_task_tree_link_tasks             (PlannerTaskTree   *tree, MrpRelationType relationship);
+void       planner_task_tree_link_tasks             (PlannerTaskTree   *tree,
+						     MrpRelationType    relationship);
 void       planner_task_tree_indent_task            (PlannerTaskTree   *tree);
 void       planner_task_tree_unindent_task          (PlannerTaskTree   *tree);
 void       planner_task_tree_reset_constraint       (PlannerTaskTree   *tree);
